--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -24,10 +24,17 @@
 		font-family: $font-family--heavy;
 		border-right: 4px solid $grey;
 
+		@include mq($tablet-width, 'max-width') {
+		   border-right: 4px solid $yellow-primary;
+		   border-bottom: 4px solid white;
+		}
+
 		&:nth-child(3){
 			border-right: none;
 			img{position: relative; vertical-align: top; top: -12px;}
 		}
+
+
 	}
 	.network-nav-item:hover{
 		opacity: 0.7;
@@ -60,6 +67,10 @@
 				@include opacity(0.7);
 			}
 		}
+		@include mq($tablet-width, 'max-width') {
+		   top: 43px; right: 35px;
+		}
+
 	}
 }
 
@@ -102,6 +113,9 @@
 	.topic-list{
 		padding: 20px 20px 30px 20px;
 		border-right: 4px solid $grey;
+		@include mq($tablet-width, 'max-width') {
+		   border-right: none;
+		}
 		
 
 		span.filter-by{
@@ -132,9 +146,20 @@
 	.topic-items{
 
 		padding: 45px 20px 10px 20px;
-		-webkit-column-count: 4; /* Chrome, Safari, Opera */
-	    -moz-column-count: 4; /* Firefox */
-	    column-count: 4;
+		-webkit-column-count: 3; /* Chrome, Safari, Opera */
+	    -moz-column-count: 3; /* Firefox */
+	    column-count: 3;
+
+	    @include mq($tablet-width, 'max-width') {
+		    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+		    -moz-column-count: 2; /* Firefox */
+		    column-count: 2;
+		}
+		@include mq(420px, 'max-width') {
+		    -webkit-column-count: 1; /* Chrome, Safari, Opera */
+		    -moz-column-count: 1; /* Firefox */
+		    column-count: 1;
+		  }  
 	    
 
 	  
@@ -452,7 +477,7 @@
 	position: absolute; 
 	background-color: white;
 	width: 100%;
-	padding: 50px 0 100px 0;
+	padding: 50px 20px 100px 20px;;
 	z-index: 20;
 	top: 200px;
 	.profile-content{
@@ -510,9 +535,14 @@
 		top: 20px;
 		right: 4%;
 		color: $grey;
+
 		&:hover{
 			@include opacity(0.7);
 		}
+		@include mq($tablet-width, 'max-width'){
+			top: 5px;
+		}
+		
 	}
 
 	#loader{
@@ -536,7 +566,16 @@
 }
 
 a.no-opacity:hover{opacity: 1}
-		
+
+.gm-style-iw{
+	font-family: $font-family--primary; 
+
+}
+a.map-link{
+	color: $yellow-primary;
+	font-family: $font-family--bold;
+
+}		
  
  
 
