online learning banner color

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -751,7 +751,7 @@ section {
 //   border-top: 5px solid $blue-primary;
 // }
 
-.parent-page-online-learning main{
+.parent-page-online main{
   border-top: 5px solid $blue-primary;
 }
 
