--- a/style.css
+++ b/style.css
@@ -5930,9 +5930,10 @@ header {
   /* line 124, sass/modules/_menus.scss */
   .main-navigation {
     float: left;
+    display: none;
   }
 }
-/* line 133, sass/modules/_menus.scss */
+/* line 134, sass/modules/_menus.scss */
 .main-navigation ul {
   display: block;
   list-style: none;
@@ -5940,7 +5941,7 @@ header {
   padding-left: 0;
   padding-top: 25px;
 }
-/* line 140, sass/modules/_menus.scss */
+/* line 141, sass/modules/_menus.scss */
 .main-navigation ul ul {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   float: left;
@@ -5949,60 +5950,60 @@ header {
   left: -999em;
   z-index: 99999;
 }
-/* line 148, sass/modules/_menus.scss */
+/* line 149, sass/modules/_menus.scss */
 .main-navigation ul ul ul {
   left: -999em;
   top: 0;
 }
-/* line 154, sass/modules/_menus.scss */
+/* line 155, sass/modules/_menus.scss */
 .main-navigation ul ul li:hover > ul, .main-navigation ul ul li.focus > ul {
   left: 100%;
 }
-/* line 160, sass/modules/_menus.scss */
+/* line 161, sass/modules/_menus.scss */
 .main-navigation ul ul a {
   width: 200px;
 }
-/* line 173, sass/modules/_menus.scss */
+/* line 174, sass/modules/_menus.scss */
 .main-navigation ul li:hover > ul,
 .main-navigation ul li.focus > ul {
   left: auto;
 }
-/* line 178, sass/modules/_menus.scss */
+/* line 179, sass/modules/_menus.scss */
 .main-navigation li {
   float: left;
   position: relative;
   margin: 0 5px 5px 25px;
 }
 @media screen and (max-width: 768px) {
-  /* line 178, sass/modules/_menus.scss */
+  /* line 179, sass/modules/_menus.scss */
   .main-navigation li {
     margin: 0 5px 5px 5px;
     float: left;
     width: 100%;
   }
 }
-/* line 193, sass/modules/_menus.scss */
+/* line 194, sass/modules/_menus.scss */
 .main-navigation li a {
   float: left;
   border-bottom: 3px solid white;
 }
-/* line 199, sass/modules/_menus.scss */
+/* line 200, sass/modules/_menus.scss */
 .main-navigation li:nth-child(1) a:hover, .main-navigation li:nth-child(1) a.current-menu-item, .main-navigation li:nth-child(1) a.current-page-ancestor {
   border-bottom: 3px solid #712880;
 }
-/* line 204, sass/modules/_menus.scss */
+/* line 205, sass/modules/_menus.scss */
 .main-navigation li:nth-child(2) a:hover, .main-navigation li:nth-child(2) a.current-menu-item, .main-navigation li:nth-child(2) a.current-page-ancestor {
   border-bottom: 3px solid #2791bd;
 }
-/* line 209, sass/modules/_menus.scss */
+/* line 210, sass/modules/_menus.scss */
 .main-navigation li:nth-child(3) a:hover, .main-navigation li:nth-child(3) a.current-menu-item, .main-navigation li:nth-child(3) a.current-page-ancestor {
   border-bottom: 3px solid #4fd1a1;
 }
-/* line 214, sass/modules/_menus.scss */
+/* line 215, sass/modules/_menus.scss */
 .main-navigation li:nth-child(4) a:hover, .main-navigation li:nth-child(4) a.current-menu-item, .main-navigation li:nth-child(4) a.current-page-ancestor {
   border-bottom: 3px solid #fec935;
 }
-/* line 220, sass/modules/_menus.scss */
+/* line 221, sass/modules/_menus.scss */
 .main-navigation a {
   display: block;
   text-decoration: none;
@@ -6014,28 +6015,39 @@ header {
   text-transform: uppercase;
 }
 
-/* Small menu. */
-/* line 242, sass/modules/_menus.scss */
-.menu-toggle,
-.main-navigation.toggled ul {
-  display: block;
+/* line 238, sass/modules/_menus.scss */
+.menu-toggle {
+  display: none;
+  text-transform: uppercase;
+  font-family: "Avenir Next Cyr W00 Bold";
+  letter-spacing: 0.04em;
+  font-size: 10px;
+}
+@media screen and (max-width: 768px) {
+  /* line 238, sass/modules/_menus.scss */
+  .menu-toggle {
+    display: block;
+    text-align: center;
+    width: 100%;
+    float: left;
+  }
 }
 
-/* line 251, sass/modules/_menus.scss */
+/* line 258, sass/modules/_menus.scss */
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
 .post-navigation {
   margin: 0 0 1.5em;
   overflow: hidden;
 }
-/* line 256, sass/modules/_menus.scss */
+/* line 263, sass/modules/_menus.scss */
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
   float: left;
   width: 50%;
 }
-/* line 261, sass/modules/_menus.scss */
+/* line 268, sass/modules/_menus.scss */
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
@@ -6044,7 +6056,7 @@ header {
   width: 50%;
 }
 
-/* line 268, sass/modules/_menus.scss */
+/* line 275, sass/modules/_menus.scss */
 .banner-sidebar {
   background-color: #3a3a3a;
   background-image: url("img/overlay.png");
@@ -6053,69 +6065,69 @@ header {
   background-position-y: 30px;
 }
 
-/* line 276, sass/modules/_menus.scss */
+/* line 283, sass/modules/_menus.scss */
 .side-menu {
   position: absolute;
   left: 50px;
   width: 200px;
   z-index: 100;
 }
-/* line 282, sass/modules/_menus.scss */
+/* line 289, sass/modules/_menus.scss */
 .side-menu .list {
   padding: 20px;
   background: #fec935;
 }
-/* line 287, sass/modules/_menus.scss */
+/* line 294, sass/modules/_menus.scss */
 .side-menu .info {
   border-bottom: 2px solid #cfcfcf;
   border-top: 2px solid #cfcfcf;
   padding: 10px;
   text-align: center;
 }
-/* line 292, sass/modules/_menus.scss */
+/* line 299, sass/modules/_menus.scss */
 .side-menu .info a {
   font-family: "Avenir Next Cyr W00 Italic";
   font-size: 10px;
 }
-/* line 300, sass/modules/_menus.scss */
+/* line 307, sass/modules/_menus.scss */
 .side-menu .apply {
   padding: 10px;
   text-align: center;
   background: #616161;
   margin-top: 10px;
 }
-/* line 306, sass/modules/_menus.scss */
+/* line 313, sass/modules/_menus.scss */
 .side-menu .apply a {
   text-transform: uppercase;
   color: #fec935;
 }
-/* line 311, sass/modules/_menus.scss */
+/* line 318, sass/modules/_menus.scss */
 .side-menu .apply:hover {
   background: #fec935;
 }
-/* line 314, sass/modules/_menus.scss */
+/* line 321, sass/modules/_menus.scss */
 .side-menu .apply:hover a {
   color: #616161;
 }
-/* line 320, sass/modules/_menus.scss */
+/* line 327, sass/modules/_menus.scss */
 .side-menu a {
   color: #616161;
   font-family: "Avenir Next Cyr W00 Bold";
   font-size: 15px;
   line-height: 30px;
 }
-/* line 328, sass/modules/_menus.scss */
+/* line 335, sass/modules/_menus.scss */
 .side-menu .scrolled-item a {
   border-bottom: 3px solid #616161;
 }
 
-/* line 334, sass/modules/_menus.scss */
+/* line 341, sass/modules/_menus.scss */
 .utilities-nav {
   background: #eeeeee;
   float: left;
   width: 100%;
 }
-/* line 339, sass/modules/_menus.scss */
+/* line 346, sass/modules/_menus.scss */
 .utilities-nav a {
   color: #8f8f8f;
   text-transform: uppercase;
@@ -6123,25 +6135,25 @@ header {
   font-family: "Avenir Next Cyr W00 Regular";
 }
 @media screen and (max-width: 768px) {
-  /* line 339, sass/modules/_menus.scss */
+  /* line 346, sass/modules/_menus.scss */
   .utilities-nav a {
     font-size: 7px;
   }
 }
-/* line 351, sass/modules/_menus.scss */
+/* line 358, sass/modules/_menus.scss */
 .utilities-nav ul {
   float: right;
   margin: 0 30px;
 }
 @media screen and (max-width: 768px) {
-  /* line 351, sass/modules/_menus.scss */
+  /* line 358, sass/modules/_menus.scss */
   .utilities-nav ul {
     float: none;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 361, sass/modules/_menus.scss */
+/* line 368, sass/modules/_menus.scss */
 .utilities-nav ul li {
   float: left;
   position: relative;
@@ -6149,23 +6161,23 @@ header {
   display: inline;
 }
 @media screen and (max-width: 768px) {
-  /* line 361, sass/modules/_menus.scss */
+  /* line 368, sass/modules/_menus.scss */
   .utilities-nav ul li {
     padding: 0 3px;
     float: none;
   }
 }
-/* line 372, sass/modules/_menus.scss */
+/* line 379, sass/modules/_menus.scss */
 .utilities-nav ul li.current_page_parent a, .utilities-nav ul li.current-menu-item a, .utilities-nav ul li.current-page-ancestor a {
   color: black;
 }
 
-/* line 379, sass/modules/_menus.scss */
+/* line 386, sass/modules/_menus.scss */
 .banner-navigation li:hover {
   opacity: 0.7;
 }
 
-/* line 383, sass/modules/_menus.scss */
+/* line 390, sass/modules/_menus.scss */
 .utilities-nav a:hover {
   color: black;
   opacity: 1;
