--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -128,6 +128,7 @@
 
 	@include mq($tablet-width, 'max-width') {
 		 float: left;
+		 display: none;
 	}
 
 	ul {
@@ -235,14 +236,20 @@
 }
 
 .menu-toggle {
+	display: none;
+	text-transform: uppercase;
+	font-family: $font-family--bold;
+	letter-spacing: 0.04em;
+	font-size: 10px;
 
+	@include mq($tablet-width, 'max-width') {
+		display: block;
+		text-align: center;
+		width: 100%;
+		float: left;
+	}
 }
 
-/* Small menu. */
-.menu-toggle,
-.main-navigation.toggled ul {
-	display: block;
-}
 
 .comment-navigation,
 .posts-navigation,
