--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -67,6 +67,7 @@ footer {
 		float: left;
 		position: relative;
 		margin: 0 5px 5px 25px;
+    border-bottom: 3px solid #e5e5e5;
 
 		&:hover > a,
 		&.focus > a {
