--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -87,16 +87,9 @@
 }
 
 /* Small menu. */
-.menu-toggle,
-.banner-navigation.toggled ul {
-	display: block;
-}
 
-@media screen and (min-width: 37.5em) {
-	.menu-toggle {
-		display: none;
-	}
-}
+
+
 
 .comment-navigation,
 .posts-navigation,
@@ -241,12 +234,14 @@
 	font-family: $font-family--bold;
 	letter-spacing: 0.04em;
 	font-size: 10px;
+	cursor: pointer;
 
 	@include mq($tablet-width, 'max-width') {
 		display: block;
 		text-align: center;
 		width: 100%;
 		float: left;
+		cursor: pointer;
 	}
 }
 
