--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -108,6 +108,7 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
 	.#{$name}-background {
 		color: white;
 		background-color: nth($color_vars, $i);
+    word-break: break-word;
 
     .input__label--hoshi-color-1::after, .input__label--hoshi-color-2::after, .input__label--hoshi-color-3::after {
     	border-color: white;
